add pygecko api feature

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 
 __pycache__/struct.cpython-310.pyc
 *.pyc
+cours/
 user_data.txt
-user_data_userfriendly.txt
-cours/*
-user_data.txt
-user_data_userfriendly.txt
-user_data.txt
-user_data_userfriendly.txt
