--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ sandbox003.py
 sandbox004.py
 log/*
 user_data_userfriendly.txt
+api_counter/counter_coingecko.txt
+api_counter/counter_cryptocompare.txt
+full_log
+user_data_userfriendly.txt
